[package]
name = "forwarded"
version = "1.0.6"
authors = ["sohayl <chahmot.s@gmail.com>"]
edition = "2018"
description = "is lib for parsing forwarded header field value"
readme = "README.md"
homepage = "https://github.com/goiw111/forwarded"
repository = "https://github.com/goiw111/forwarded"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.4"
actix-web = "3.3.2"
actix-rt = "1.1.1"
